metrics-dashboards-charts/init-yaml/emoji-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GRPCRoute
metadata:
  name: emoji-route
  namespace: emojivoto
spec:
  parentRefs:
    - name: emoji-svc
      namespace: emojivoto
      kind: Service
      group: ""
  rules:
    - backendRefs:
      - name: emoji-svc
        namespace: emojivoto
        kind: Service
        group: ""
        port: 8080
