metrics-dashboards-charts/init-yaml/smiley-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: smiley-route
    namespace: faces
spec:
  parentRefs:
    - name: smiley
      kind: Service
      group: ""
      port: 80
  rules:
    - matches:
      - path:
          value: "/"
          type: "PathPrefix"
        method: GET
      backendRefs:
      - name: smiley
        kind: Service
        group: ""
        port: 80
        weight: 80
